Fixed section spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -341,7 +341,7 @@ h1, h2, h3, h4, h5, h6 {
 /* Portfolio Wrap Section */
 #portfoliowrap {
 	display: block;
-	margin-top: 50px;
+	margin-top: 10px;
 	margin-bottom: 50px;
 }
 
@@ -380,8 +380,8 @@ h1, h2, h3, h4, h5, h6 {
 /* Service Wrap */
 #servicewrap {
 	display: block;
-	margin-top: 50px;
-	margin-bottom:50px;
+	margin-top: 10px;
+	margin-bottom:0px;
 }
 
 #servicewrap h1 {
